--- CHANGES SINCE UASNIFFER 1.1 (under development) --------------------------

* Added unit test for Maxthon 1.0 beta on Mac (OS X 10.8).
* Added unit test for Firefox 14.0 on Mac (OS X 10.7).
* Upgraded dependency on znerd-util from 0.7 to 0.8.
* Refactored unit tests, now using PolySuite-approach.


--- CHANGES SINCE UASNIFFER 1.0 (July 21, 2012) ------------------------------

* Added parent POM: znerd-oss-parent v2.
* Upgraded dependency on maven-compiler-plugin from 2.3.2 to 2.5.1.
* Upgraded dependency on znerd-util from 0.6 to 0.7.
* Removed 'distributionManagement' section from POM.
* POM Coordinates: org.znerd.uasniffer:uasniffer -> org.znerd:uasniffer.


--- CHANGES SINCE UASNIFFER 0.6 (March 24, 2012) -----------------------------

* Added unit test for iPhone with iOS 5.1.
* Improved Android detection.
* Added support for MobileFirefox.
* Fixed a bug in the detection of tablets.
* Fixed a bug in the detection of the Chrome Frame plugin.


--- CHANGES SINCE UASNIFFER 0.5 ----------------------------------------------

* Upgraded dependency on znerd-util from 0.5 to 0.6.
* Upgraded plugin versions.


--- CHANGES SINCE UASNIFFER 0.4 ----------------------------------------------

* Added dependency: znerd-util.
* Refactored code and improved code style.
* Added unit test for NCSA Mosaic 2.7 on AIX.
* Added unit tests for older Netscape versions (updated sniffing code).
* Added unit tests for IRIX OS version detection (updated sniffing code).
* Added unit test for Netscape 9.1 (updated sniffing code).
* Added support for Bada OS.
* Added unit tests for Dolphin 2.0.
* Added support for Maemo OS.
* Added unit tests for Fennec.
* Recognizing Windows Tablet PCs as tablets.
* Added unit test for Samsung Galaxy Tab tablet.


--- CHANGES SINCE UASNIFFER 0.3 ----------------------------------------------

* Added unit tests for Amazon Kindle devices (updated sniffing code).
* Added unit test for Firefox 5 beta.