@@ -4,6 +4,7 @@
 * Added unit test for Firefox 14.0 on Mac (OS X 10.7).
 * Upgraded dependency on znerd-util from 0.7 to 0.8.
 * Refactored unit tests, now using PolySuite-approach.
+* Added knowledge: Nook 1.0 is an Android device.
 
 
 --- CHANGES SINCE UASNIFFER 1.0 (July 21, 2012) ------------------------------
